--- a/index.html
+++ b/index.html
@@ -119,6 +119,11 @@
                                 <td>Featured Extra</td>
                                 <td>2013</td>
                             </tr>
+                            <tr>
+                                <td>RTÉ Scannal</td>
+                                <td>Gerard Hagan</td>
+                                <td>2014</td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
@@ -157,6 +162,11 @@
                                 <td>As We Like Him</td>
                                 <td>Various Characters</td>
                                 <td>2012</td>
+                            </tr>
+                            <tr>
+                                <td>Buried Child</td>
+                                <td>Vince</td>
+                                <td>2014</td>
                             </tr>
                         </tbody>
                     </table>
