--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-4 col-sm-4 col-sm-offset-4 col-4 col-offset-4">
-                    <img class="img-responsive" src="assets/img/headshot-lo-res.png" alt="headshot"/>
+                    <img class="img-responsive" src="http://imgmf0.starnow.com/43/2267543_5744469.jpg" alt="headshot"/>
                 </div>
                 </br>
             </div>
